got uwsgi working

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,14 +60,14 @@ http {
 
 	include /etc/nginx/sites-enabled/*;
 
-	server {
-	       listen 8082;
-	       listen [::]:8082;
-	       location / {
-	       		root /home/ubuntu/test/lab;
-			index text2;
-	       }
-	}
+#	server {
+#	       listen 8084;
+#	       listen [::]:8084;
+#	       location / {
+#	       		root /home/vagrant/test/lab;
+#			index text2.becky;
+#	       }
+#	}
 }
 
 
